test/fixtures/hardcoded-secrets/positive/twilio.ts
export const TWILIO_ACCOUNT_SID = "AC00000000000000000000000000000000";
