test/fixtures/hardcoded-secrets/negative/twilio.ts
export const TWILIO_ACCOUNT_SID = process.env.TWILIO_ACCOUNT_SID;
